--- a/SMSdroid/build.gradle
+++ b/SMSdroid/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
     }
 }
 apply plugin: 'com.android.application'
@@ -78,4 +78,6 @@ dependencies {
     implementation 'de.ub0r.android.lib:lib:1.1.1'
     implementation 'de.ub0r.android.logg0r:logg0r:2.0.0'
     implementation 'com.google.android.ads.consent:consent-library:1.0.6'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.volley:volley:1.1.1'
 }
