--- a/SMSdroid/build.gradle
+++ b/SMSdroid/build.gradle
@@ -12,7 +12,10 @@ apply plugin: 'com.android.application'
 repositories {
     maven {
         url 'https://raw.githubusercontent.com/felixb/mvn-repo/master'
+
     }
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+
     jcenter()
     google()
 }
@@ -28,9 +31,10 @@ android {
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 23
         versionCode 141760000
         versionName "1.7.6"
+
     }
 
     signingConfigs {
@@ -80,4 +84,7 @@ dependencies {
     implementation 'com.google.android.ads.consent:consent-library:1.0.6'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'org.lucasr.twowayview:core:1.0.0-SNAPSHOT@aar'
+    implementation 'org.lucasr.twowayview:layouts:1.0.0-SNAPSHOT@aar'
+
 }
