--- a/SMSdroid/src/main/AndroidManifest.xml
+++ b/SMSdroid/src/main/AndroidManifest.xml
@@ -62,6 +62,24 @@
             android:theme="@style/Theme.SMSdroid_Light"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:mimeType="vnd.android-dir/mms-sms"
+                    android:pathPrefix="/threadID/" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:mimeType="vnd.android-dir/mms-sms"
+                    android:pathPrefix="/conversations/" />
+            </intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -90,25 +108,8 @@
             android:configChanges="orientation|keyboardHidden"
             android:launchMode="singleTop"
             android:theme="@style/Theme.SMSdroid_Light"
-            android:windowSoftInputMode="adjustResize">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+            android:windowSoftInputMode="stateVisible|adjustResize">
 
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:mimeType="vnd.android-dir/mms-sms"
-                    android:pathPrefix="/threadID/" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:mimeType="vnd.android-dir/mms-sms"
-                    android:pathPrefix="/conversations/" />
-            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
